# PTCG

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  FINAL_AUDIT_REPORT.md  FINAL_REPORT.md  GITHUB_READINESS.md  PRODUCTION_HARDENING_REPORT.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benchmarks/: run.py
docs/: ARCHITECTURE.md  EXTENSION_GUIDE.md  PIPELINE.md
frontend/: .env.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/public/: manifest.json
scripts/: init_github.ps1
src/: logging_config.py
src/cards/: __init__.py  cache.py  enums.py  exceptions.py  models.py  normalizer.py  parser.py  repository.py  search.py  types.py  validators.py
src/cli/: __init__.py  __main__.py  main.py
src/competition/: __init__.py  action_adapter.py  agent.py  checkpoint_loader.py  game_adapter.py  inference_engine.py
src/deck_builder/: __init__.py  archetypes.py  builder.py  candidates.py  constraints.py  crossover.py  exports.py  generators.py  mutations.py  objectives.py  optimizer.py  repair.py  reports.py  scoring.py  search.py  validators.py
src/decks/: __init__.py  analyzer.py  archetypes.py  consistency.py  curves.py  exports.py  matchup.py  metrics.py  models.py  reports.py  synergy.py  validators.py  win_conditions.py
src/evaluation/: __init__.py  benchmarks.py  dashboard.py  elo_arena.py  explainability.py  mcts_evaluation.py  opening_book.py  selfplay_analytics.py  simulator_validation.py
src/game_state/: __init__.py  actions.py  encoder.py  exports.py  features.py  hashing.py  history.py  masks.py  models.py  player.py  serialization.py  state.py  tensors.py  validators.py  zones.py
src/mcts/: __init__.py  backpropagation.py  checkpoints.py  config.py  determinization.py  evaluator.py  expansion.py  exports.py  features.py  inference_cache.py  network.py  neural_evaluator.py  neural_policy.py  node.py  policies.py  replay_buffer.py  rollout.py  scheduler.py  search.py  selection.py  selfplay.py  simulation.py  statistics.py  training_config.py  training_targets.py  transposition.py  tree.py  validators.py
src/server/: __init__.py  app.py
src/simulator/: __init__.py  _lookup.py  abilities.py  ability_engine.py  actions.py  attack_engine.py  effects.py  energy_engine.py  evolution_engine.py  executor.py  exports.py  knockout.py  legal_actions.py  modifiers.py  prizes.py  randomizer.py  rules.py  setup.py  simulator.py  trainer_engine.py  trainers.py  turn_manager.py  validators.py  victory.py  zones.py
src/training/: __init__.py  arena.py  callbacks.py  checkpointing.py  config.py  curriculum.py  early_stopping.py  evaluator.py  experiments.py  exports.py  logging.py  losses.py  metrics.py  monitor.py  pipeline.py  promotion.py  scheduler.py  trainer.py  validators.py
src/validation/: __init__.py  replay_validator.py  rule_coverage.py  simulator_validator.py  state_validator.py
submission/: CHECKPOINT_AUDIT.md  FINAL_DECK.md  FINAL_SUBMISSION_AUDIT.md  FINAL_SUBMISSION_DECK.md  KAGGLE_SUBMISSION_REPORT.md  LICENSE_AUDIT.md  MODEL_SELECTION.md  ROOT_CAUSE_ANALYSIS.md  SUBMISSION_BASELINE.md  SUBMISSION_CHECKLIST.md  _diagnose_termination.py  _fast_eval.py  _make_figures.py  _make_kaggle_figures.py  _make_multi_run_figure.py  _run_evaluation.py  _run_real_eval.py  kaggle_eval_notebook.ipynb  kaggle_notebook.ipynb  kaggle_writeup.md
submission/benchmarks/: benchmark_baseline.json  evaluate_random_baseline.json
submission/csv/: agent_vs_random.csv  agent_vs_random_summary.json  deck_aggro.json
submission/evaluation/: random_vs_random.csv  summary.json  termination_diagnostic.json
submission/screenshots/: README.md
tests/cards/: test_effects.py  test_models.py  test_normalizer.py  test_parser.py  test_relationships.py  test_repository.py  test_search.py
tests/cli/: test_cli.py
(+108 files in other folders)
