[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pokemon-ai"
version = "1.0.0"
description = "Pokémon TCG AI — production framework for the Kaggle PTCG AI Battle Challenge"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Pokémon TCG AI Contributors" }]
keywords = ["pokemon", "tcg", "alphazero", "mcts", "rl", "kaggle"]

dependencies = [
    "pydantic>=2.0",
    "loguru>=0.7",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "hydra-core>=1.3",
    "rapidfuzz>=3.0",
    "networkx>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "fastapi>=0.110",
    "httpx>=0.27",
    "uvicorn>=0.27",
]
server = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "httpx>=0.27",
]
neural = [
    "torch>=2.0",
]

[project.scripts]
pokemon-ai = "src.cli.main:main"

[project.urls]
Homepage = "https://github.com/your-org/pokemon-ai"
Source = "https://github.com/your-org/pokemon-ai"
Issues = "https://github.com/your-org/pokemon-ai/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
]
ignore = [
    "E501",  # line length (handled by black)
    "B008",  # function calls in default arguments
    "UP042", # str-enum: explicit `str, Enum` is preferred for JSON serialization
    "N806",  # uppercase locals: allowed for math vars (N, K, P, Q)
    "N803",  # uppercase arg names: same rationale
    "N812",  # lowercase import alias
    "B905",  # zip(strict=): legacy code; opt-in case-by-case
    "F841",  # unused locals: kept for clarity in a few sites
    "B007",  # unused loop variable
    "E402",  # module-level import not at top: needed for optional-torch guards
    "E741",  # ambiguous variable name
    "B904",  # raise-from: not always desired
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",  # allow assert in tests
    "B017",  # pytest.raises(Exception) is acceptable in tests
    "E702",  # multiple statements on one line (test compactness)
    "E721",  # use isinstance — tests sometimes compare types directly
    "C408",  # dict() constructor — clarity in tests
]

# ---------------------------------------------------------------------------
# Black
# ---------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py312"]

# ---------------------------------------------------------------------------
# MyPy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
